# PongSFML

./: .gitignore  CMakeLists.txt  main.cpp
header/: Application.hpp  EventManager.hpp  GameState.hpp  GameUpdater.hpp  Renderer.hpp
header/entities/: Ball.hpp  Counter.hpp  Entity.hpp  Frames.hpp  HorizontalPlatform.hpp  Platform.hpp  VerticalPlatform.hpp
src/: Application.cpp  EventManager.cpp  GameState.cpp  GameUpdater.cpp  Renderer.cpp
src/entities/: Ball.cpp  Counter.cpp  Entity.cpp  Frames.cpp  HorizontalPlatform.cpp  Platform.cpp  VerticalPlatform.cpp
